--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,6 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "skipLibCheck": true,
-    "typeRoots": ["./types"]
-  },
-  "include": ["src/**/*", "types/express/index.d.ts"]
+    "skipLibCheck": true
+  }
 }
